src/core-crm/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>The Milestone data object stores information different milestones identified as important indicators around how a business process is progressing.</description>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>