src/core-crm/objects/Milestone__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Expected end date of the milestone completion window.</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>