src/core-crm/objects/Milestone__c/fields/Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date__c</fullName>
    <description>Reminder date for the milestone.</description>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>