src/core-crm/objects/Milestone__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Expected start date of milestone completion window.</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>