src/core-crm/objects/Milestone__c/validationRules/Milestone_Type_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_Type_is_Required</fullName>
    <active>true</active>
    <description>Milestone Type is mandatory</description>
    <errorConditionFormula>ISBLANK(TEXT(Milestone_Type__c ))</errorConditionFormula>
    <errorDisplayField>Milestone_Type__c</errorDisplayField>
    <errorMessage>Milestone Type is mandatory</errorMessage>
</ValidationRule>