src/core-crm/objects/Milestone__c/validationRules/OpportunityOutcome_UserRole_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityOutcome_UserRole_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Opportunity_Outcome__r.Id !=null,
NOT(ISNEW()),
OR(
$UserRole.Name = &quot;VP Business Development&quot;,
$UserRole.Name = &quot;Executive Director Industry Engagement&quot;,
$UserRole.Name = &quot;Partnership Manager&quot;
)
)</errorConditionFormula>
    <errorMessage>You don’t have the right permission to create or edit this record</errorMessage>
</ValidationRule>